--- a/inst/rmarkdown/templates/cynkra_report/skeleton/skeleton2.Rmd
+++ b/inst/rmarkdown/templates/cynkra_report/skeleton/skeleton2.Rmd
@@ -11,6 +11,14 @@ classoption:
 output:
   rmarkdown::pdf_document:
     latex_engine: lualatex
+    includes:
+      in_header: asset-preamble.tex
+
+
+#      before_body: doc-prefix.tex
+#      after_body: doc-suffix.tex
+
+
 
 # custom fonts (requires 'latex_engine: lualatex')
 mainfont: FrutigerNeueLTPro-Thin.otf
@@ -22,14 +30,35 @@ mainfontoptions:
 - BoldItalicFont=FrutigerNeueLTCom-Medium.ttf
 
 
+subparagraph: yes
+
 lang: en-US
+
+
+
+
+# - \usepackage[small]{titlesec}  # omit default title page
+
+# Customize size, spacing, and color of headings
+#  - \titleformat{\chapter}[block]{\normalfont\huge\bfseries\color{cynkrablue}}{\thechapter\hspace{0.1em}}{0.5em}{\huge}
+#  - \titlespacing*{\chapter}{0pt}{2\baselineskip}{2\baselineskip}
+#  - \titleformat{\section}{\normalfont\bfseries\color{cynkrablue}\fontsize{15}{18}\selectfont}{\thesection}{0.5em}{}
+#  - \titlespacing*{\section}{0pt}{1.25\baselineskip}{0.65\baselineskip}
+#  - \titleformat{\subsection}{\normalfont\bfseries\color{cynkrablue}\fontsize{13}{15}\selectfont}{\thesubsection}{1em}{}
+#  - \titleformat{\subsubsection}{\normalfont\color{cynkrablue}\fontsize{12}{14}\selectfont}{\thesubsection}{1em}{}
+
+
+
 ---
+
+
+
 
 
 
 # YAML Header
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+Lorem ipsum dolor [https://www.cynkra.com](https://www.cynkra.com) sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
