--- a/inst/mypackage/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/mypackage/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -15,7 +15,7 @@ output          : mypackage::mypackage
 library(knitr)
 library(kableExtra)
 library(tidyverse)
-library(agdown)
+library(mypackage)
 cd_knit_chunk_opts()
 ```
 
