fixes here and there

--- a/inst/mypackage/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/mypackage/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -1,6 +1,6 @@
 ---
 title           : "Report-Title"
-subtitle        : "Subtile"
+subtitle        : "Subtitle"
 author          : ["My-Name", "Our-Team"]
 
 documentclass   : article   # article (default) report
