--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -33,7 +33,7 @@ To create your own, customized RMarkdown template, start by creating an indiedow
 indiedown::create_indiedown_package("mydown")
 ```
 
-This creates a package skeleton at `./mydown`. You can build build *mydown*, using 'build and reload' in the RStudio or via the command line, as folows:
+This creates a package skeleton at `./mydown`. You can build build *mydown*, using 'build and reload' in the RStudio or via the command line, as follows:
 
 ```r
 devtools::install("mydown")
