--- a/README.Rmd
+++ b/README.Rmd
@@ -18,18 +18,26 @@ indiedown allows you to generate a customized RMarkdown PDF template in a few ba
 
 Start by installing indiedown:
 
-```r
-# install.packages("remotes")
-remotes::install_github("cynkra/indiedown")
+``r
+install.packages("indiedown")
 ```
 
-To create your own, customized RMarkdown template, start by creating an indiedown template package, called `mydown`:
+You can also install the development version from GitHub:
+
+```r
+# install.packages("devtools")
+devtools::install_github("cynkra/indiedown")
+```
+
+To create your own, customized RMarkdown template, start by creating an indiedown template package, called `mydown` in this example.
+Navigate to the directory where you want to create the package, then:
 
 ```r
 indiedown::create_indiedown_package("mydown")
 ```
 
-This creates a package skeleton at `./mydown`. You can build build *mydown*, using 'build and reload' in the RStudio or via the command line, as follows:
+This creates a package skeleton in the new `mydown` directory in the current working directory.
+You can build build *mydown*, using 'Build and Reload' in the RStudio or via the command line, as follows:
 
 ```r
 devtools::install("mydown")
@@ -37,6 +45,5 @@ devtools::install("mydown")
 
 With *mydown* built and installed, our new template is available in RStudio (after a restart).
 
-See `vignette("indiedown")` for a more detailed tutorial.
-
+Read more at `vignette("indiedown")`.
 See `vignette("customize")` for how to customize your template.
