--- a/vignettes/customize.Rmd
+++ b/vignettes/customize.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "customize"
+title: "Customize Individual RMarkdown Templates"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Customize Individual RMarkdown Templates}
@@ -89,7 +89,3 @@ For most customizations, it is recommended to turn off the default LaTeX title p
 RMarkdown Templates demonstrate the use of a customized style. RMarkdown requires you to put them to `inst/rmarkdown/templates/mytemplate`.
 RStudio will recognize them and show them when you click 'New RMarkdown Document' and 'from Template'.
 You can also use `usethis::use_rmarkdown_template()` to add a new template.
-
-
-
-
