--- a/vignettes/indiedown.Rmd
+++ b/vignettes/indiedown.Rmd
@@ -14,11 +14,15 @@ knitr::opts_chunk$set(
 )
 ```
 
-# indiedown: Individual RMarkdown PDF Templates
-
-indiedown makes it easy to generate a customized RMarkdown PDF templates that follow the principles of your corporate design.
+indiedown makes it easy to generate a customized RMarkdown PDF template that follow the principles of your corporate design.
 
 Start by installing indiedown:
+
+```r
+install.packages("indiedown")
+```
+
+You can also install the development version from GitHub:
 
 ```r
 # install.packages("remotes")
@@ -27,13 +31,20 @@ remotes::install_github("cynkra/indiedown")
 
 ## Create an customized RMarkdown template
 
-To create your own, customized RMarkdown template, start by creating an indiedown template package, called `mydown`:
+```r
+# install.packages("devtools")
+devtools::install_github("cynkra/indiedown")
+```
+
+To create your own, customized RMarkdown template, start by creating an indiedown template package, called `mydown` in this example.
+Navigate to the directory where you want to create the package, then:
 
 ```r
 indiedown::create_indiedown_package("mydown")
 ```
 
-This creates a package skeleton at `./mydown`. You can build build *mydown*, using 'build and reload' in the RStudio or via the command line, as follows:
+This creates a package skeleton in the new `mydown` directory in the current working directory.
+You can build build *mydown*, using 'Build and Reload' in the RStudio or via the command line, as follows:
 
 ```r
 devtools::install("mydown")
@@ -45,16 +56,16 @@ With *mydown* built and installed, our new template is available in RStudio (aft
 
 
 
-## Apply custom modification at three customization points
+## Customization points
 
 indiedown does not modify the default `.tex` template of Pandoc. Instead, all modifications are applied on top of it.
 This should make it compliant with future releases of Pandoc and RMarkdown.
 
 There are three possible customization points to customize an indiedown skeleton:
 
-- Set defaults (such as fonts or geometry) in the YAML header at `inst/indedown/default.ymal`
+- Set defaults (such as fonts or geometry) in the YAML header at `inst/indedown/default.yaml`
 
-- Tweak LaTeX settings at `inst/indedown/pramble.tex`
+- Tweak LaTeX settings at `inst/indedown/preamble.tex`
 
 - Apply dynamic adjustments in `pre_processor.R` (advanced)
 
@@ -77,6 +88,6 @@ The function `cd_page_title()` creates an example title page that can be adjuste
 indiedown does not modify the default `.tex` template of Pandoc. Instead, all modifications are applied on top of it.
 This should make it compliant with future releases of Pandoc and RMarkdown.
 
-### Write Keep Corporate Design Elements
+### Corporate Design Elements
 
-Keep all corporate design elements as R code. This keeps the tex code simple and allows flexible extensions.
+Keep all corporate design elements as R code. This keeps the LaTeX code simple and allows flexible extensions.
