--- a/README.Rmd
+++ b/README.Rmd
@@ -8,9 +8,9 @@ output: downlit::readme_document
 Individual RMarkdown PDF Templates.
 
 <!-- badges: start -->
-[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.cynkra.org/articles/stages.html#stable)
-[![R build status](https://github.com/cynkra/indiedown/workflows/R-CMD-check/badge.svg)](https://github.com/cynkra/indiedown/actions)
-[![Coverage status](https://codecov.io/gh/cynkra/indiedown/branch/master/graph/badge.svg)](https://codecov.io/github/cynkra/indiedown?branch=master)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![R build status](https://github.com/cynkra/indiedown/workflows/rcc/badge.svg)](https://github.com/cynkra/indiedown/actions)
+[![Coverage status](https://codecov.io/gh/cynkra/indiedown/branch/main/graph/badge.svg)](https://codecov.io/github/cynkra/indiedown?branch=master)
 [![CRAN status](https://www.r-pkg.org/badges/version/indiedown)](https://cran.r-project.org/package=indiedown)
 <!-- badges: end -->
 
