--- a/vignettes/indiedown.Rmd
+++ b/vignettes/indiedown.Rmd
@@ -18,20 +18,20 @@ indiedown makes it easy to generate a customized RMarkdown PDF template that fol
 
 Start by installing indiedown:
 
-```r
+```{r eval = FALSE}
 install.packages("indiedown")
 ```
 
 You can also install the development version from GitHub:
 
-```r
+```{r eval = FALSE}
 # install.packages("remotes")
 remotes::install_github("cynkra/indiedown")
 ```
 
 ## Create an customized RMarkdown template
 
-```r
+```{r eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("cynkra/indiedown")
 ```
@@ -39,14 +39,14 @@ devtools::install_github("cynkra/indiedown")
 To create your own, customized RMarkdown template, start by creating an indiedown template package, called `mydown` in this example.
 Navigate to the directory where you want to create the package, then:
 
-```r
+```{r eval = FALSE}
 indiedown::create_indiedown_package("mydown")
 ```
 
 This creates a package skeleton in the new `mydown` directory in the current working directory.
 You can build build *mydown*, using 'Build and Reload' in the RStudio or via the command line, as follows:
 
-```r
+```{r eval = FALSE}
 devtools::install("mydown")
 ```
 
