--- a/README.Rmd
+++ b/README.Rmd
@@ -47,3 +47,9 @@ With *mydown* built and installed, our new template is available in RStudio (aft
 
 Read more at `vignette("indiedown")`.
 See `vignette("customize")` for how to customize your template.
+
+---
+
+## Code of Conduct
+
+Please note that the indiedown project is released with a [Contributor Code of Conduct](https://cynkra.github.io/indiedown/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
