--- a/vignettes/walkthrough.Rmd
+++ b/vignettes/walkthrough.Rmd
@@ -24,9 +24,9 @@ This should make it compliant with future releases of Pandoc and RMarkdown.
 
 There are three possible customization points to customize an indiedown skeleton:
 
-- Set defaults (such as fonts or geometry) in the YAML header at `inst/indedown/default.yaml`
+- Set defaults (such as fonts or geometry) in the YAML header at `inst/indiedown/default.yaml`
 
-- Tweak LaTeX settings at `inst/indedown/preamble.tex`
+- Tweak LaTeX settings at `inst/indiedown/preamble.tex`
 
 - Apply dynamic adjustments in `pre_processor.R` (advanced)
 
@@ -107,7 +107,7 @@ Let's turn to the second customization point, `preamble.tex`. This contains LaTe
 \usepackage[medium]{titlesec}
 ```
 
-As `default.yaml`, it supports substitution of `<<indiedown_path>>`, so you could link to images here as well. Most of the time, you do not want do too many thing here.
+As for `default.yaml`, it supports substitution of `<<indiedown_path>>`, so you could link to images here as well. Generally, you do not want do too many thing here.
 Note that the default LaTeX title page is disabled in the default template, for good reason:
 
 ```tex
@@ -120,7 +120,7 @@ Instead, we will build our own title page in R now.
 
 One of the core principles of indiedown is to keep corporate design elements as R code. That way, elements can be arranged flexibly and adjusted to particular needs.
 
-As a final step, we build a customized title page, by modifying the function definition of `R/cd_page_title`. The function writes LaTeX code that will be added to the `.Rmd` when `cd_page_title()` is called.
+As a final step, we build a customized title page by modifying the function definition of `R/cd_page_title`. The function writes LaTeX code that will be added to the `.Rmd` when `cd_page_title()` is called.
 
 To make writing of LaTeX code in R easy, we rely on the raw string feature that was added in R 4.0.0. It allows you to write pure LaTeX code in R, without having to escape every `\` by a second `\\`.
 
@@ -128,7 +128,7 @@ If you have to use a version of R that is older, the `read_tex()` function offer
 
 The `indiedown_glue()` helper function uses the [glue](https://CRAN.R-project.org/package=glue) package to substitute variables in the string. That way, variables such as `title` or `subtitle` will be substituted in the LaTeX code.
 
-With `indiedown_path_tex()`, you can also refer to the path of `inst/indiedown`, and use assets from the package. In the example, we use this to include a logo. Now, we don't want to use a logo but rather a photography of a beautiful parrot. We download the image from [unsplash.com](https://unsplash.com/photos/gGC63oug3iY) in medium quality and store it in `res/mikhail-vasilyev-gGC63oug3iY-unsplash.jpg`. Then, we change the function definition as follows:
+With `indiedown_path_tex()`, you can also refer to the path of `inst/indiedown`, and use assets from the package. In the example, we use this to include a logo. Now, we don't want to use a logo but rather a photograph of a beautiful parrot. We download the image from [unsplash.com](https://unsplash.com/photos/gGC63oug3iY) in medium quality and store it in `res/mikhail-vasilyev-gGC63oug3iY-unsplash.jpg`. Then, we change the function definition as follows:
 
 ```r
 cd_page_title <- function(title = default(rmarkdown::metadata$title, "Title"),
@@ -173,7 +173,7 @@ Building the package again, and running the template `.Rmd`, we get:
 
 ## Where to go from here
 
-indiedown provides a framework to easily generate customized RMarkdown templates. Templates can be customized by the full power of Pandoc of LaTeX, through various points of customizations.
+indiedown provides a framework to easily generate customized RMarkdown templates. Templates can be customized by the full power of Pandoc and LaTeX through various points of customization.
 
 This walk-through introduced two of them.
 For more details and a description of the third one, see `vignettes("customize")`.
