--- a/vignettes/walkthrough.Rmd
+++ b/vignettes/walkthrough.Rmd
@@ -176,7 +176,7 @@ Building the package again, and running the template `.Rmd`, we get:
 indiedown provides a framework to easily generate customized RMarkdown templates. Templates can be customized by the full power of Pandoc and LaTeX through various points of customization.
 
 This walk-through introduced two of them.
-For more details and a description of the third one, see `vignettes("customize")`.
+For more details and a description of the third one, see `vignette("customize")`.
 
 
 
