--- a/inst/mypackage/inst/indiedown/preamble.tex
+++ b/inst/mypackage/inst/indiedown/preamble.tex
@@ -37,7 +37,7 @@
 % units. E.g., \unitfrac{m}{s}
 \usepackage{units}
 
-% cross-references to according to the “type” of cross-reference
+% cross-references to according to the type of cross-reference
 \usepackage{cleveref}
 
 % Increase the number of simultaneous LaTeX floats
