--- a/inst/mypackage/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/mypackage/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -23,7 +23,7 @@ cd_knit_chunk_opts()
 cd_page_title()
 ```
 
-# Customized RMarkdown Template
+# Customized R Markdown Template
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
