--- a/vignettes/customize.Rmd
+++ b/vignettes/customize.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Customize Individual RMarkdown Templates"
+title: "Customize Individual R Markdown Templates"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Customize Individual RMarkdown Templates}
+  %\VignetteIndexEntry{Customize Individual R Markdown Templates}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -32,7 +32,7 @@ It can contain basic pandoc settings, additional LaTeX settings and dynamic pand
 
 `default.yaml` is the only required element of an indiedown template.
 It specifies the default pandoc options used by your template.
-To experiment with pandoc options, simply add them to the YAML header of a standard RMarkdown document.
+To experiment with pandoc options, simply add them to the YAML header of a standard R Markdown document.
 
 Most relevant LaTeX options can be set as pandoc options. For example, pandoc options allow you to set a customized font or a user defined geometry. If possible always prefer Pandoc options instead of LaTeX (covered below), as this will minimize unwanted interactions with other options.
 
@@ -52,7 +52,7 @@ Common options set in `preamble.tex` are the modification of section headings (e
 (`\usepackage{float}`), or the packages used by [kableExtra](https://CRAN.R-project.org/package=kableExtra).
 
 For most customizations, it is recommended to turn off the default LaTeX title page, using
-`\renewcommand\maketitle{}`. Creating your own title page via LaTeX commands in the RMarkdown script or by a customized R function is a much easier and more flexible way to create a customized title page.
+`\renewcommand\maketitle{}`. Creating your own title page via LaTeX commands in the R Markdown script or by a customized R function is a much easier and more flexible way to create a customized title page.
 
 
 ### Dynamic Settings
@@ -84,6 +84,6 @@ For most customizations, it is recommended to turn off the default LaTeX title p
 
 ## Templates
 
-RMarkdown Templates demonstrate the use of a customized style. RMarkdown requires you to put them in `inst/rmarkdown/templates/mytemplate`.
-RStudio will recognize them and show them when you click 'New RMarkdown Document' and 'from Template'.
+R Markdown Templates demonstrate the use of a customized style. R Markdown requires you to put them in `inst/rmarkdown/templates/mytemplate`.
+RStudio will recognize them and show them when you click 'New R Markdown Document' and 'from Template'.
 You can also use `usethis::use_rmarkdown_template()` to add a new template.
