--- a/README.Rmd
+++ b/README.Rmd
@@ -45,8 +45,9 @@ devtools::install("mydown")
 
 With *mydown* built and installed, our new template is available in RStudio (after a restart).
 
-Read more at `vignette("indiedown")`.
-See `vignette("walkthrough")` for a step by step guide to customization. See `vignette("customize")` for advanced customization.
+- Read more at `vignette("indiedown")`.
+- See `vignette("walkthrough")` for a step by step guide to customization.
+- See `vignette("customize")` for advanced customization.
 
 ---
 
