Comment out cleveref since not used actively
Avoid conflicts with hyperref

--- a/inst/mypackage/inst/indiedown/preamble.tex
+++ b/inst/mypackage/inst/indiedown/preamble.tex
@@ -38,7 +38,9 @@
 \usepackage{units}
 
 % cross-references to according to the type of cross-reference
-\usepackage{cleveref}
+% comment out since not used (no \cref and company are found) and avoid conflicts with hyperref.
+% see section 14.1 of cleveref package: https://www.ctan.org/pkg/cleveref
+% \usepackage{cleveref}
 
 % Increase the number of simultaneous LaTeX floats
 \usepackage{morefloats}
